Fix main action text in dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,7 @@
     }
 
     .sp-container .card {
+        color: white;
         background: #1d1d1d !important;
         border: 1px solid #303030;
     }
